test fix for losing aspect ration on mobile

--- a/src/components/Camera/Camera.module.scss
+++ b/src/components/Camera/Camera.module.scss
@@ -59,6 +59,9 @@
 
     .cameraCanvas{
       display: none;
+      width: 100%;
+      height: 100%;
+      position: absolute;
     }
 
     .camera {
